staging/wp-content/themes/workstatus/assests/css/alternative-new.css
/* ... */
.middle-section .item .column-left .text-column h3 {
  position: relative;
  padding-left: 44px; }
  .middle-section .item .column-left .text-column h3:before {
    content: "";
    background: url(../images/list-icon.png) no-repeat;
    width: 30px;
    background-size: 100%;
    height: 30px;
    position: absolute;
    left: 0;
    top: 0; }

.middle-section .item .column-left .text-column.listing h3 {
  padding-left: 0; }

.middle-section .item .column-left .text-column.listing h3:before {
  display: none; }

.section-numbers .number-row .number-col {
  padding: 30px; }

.trackEm-container .trackEm {
  padding: 0 0 80px; }
  .trackEm-container .trackEm:last-child {
    padding: 0; }

/*All Partners Ends From Here*/
@media (max-width: 1440px) {
  .section-numbers {
    padding-top: 0; }

  .ws-tabtop {
    padding: 80px 0 0; }

  .ws-table .table-block {
    margin: -90px auto 80px; }

  .trackEm-container .trackEm {
    padding: 0 0 60px; }
    .trackEm-container .trackEm:last-child {
      padding: 0; } }
@media (max-width: 1280px) {
  .all-partners {
    padding-top: 0; }
    .all-partners .part-row {
      grid-template-columns: repeat(4, 1fr); }
      .all-partners .part-row .part-col {
        padding: 15px 20px; }

  .ws-table .table-block .table-row .ws-column {
    padding: 15px; }
  .ws-table .table-block .table-row:last-child .ws-column {
    padding: 15px; }
    .ws-table .table-block .table-row:last-child .ws-column strong {
      width: auto; }
  .ws-table .table-block .div-block-top .logovs .price {
    min-width: auto;
    padding: 6px;
    font-size: 12px; }
  .ws-table .table-block .div-block-top .logovs:nth-child(6) .price {
    font-size: 13px; }
  .ws-table .view-more {
    left: 36px; } }
@media (max-width: 979px) {
  .alter-image img {
    margin: 0; }

  .ws-table .table-block .div-block-top .logovs {
    padding: 15px; }
    .ws-table .table-block .div-block-top .logovs h2 {
      font-size: 26px; }
  .ws-table .view-more {
    bottom: 215px;
    left: 25px; }
  .ws-table:before {
    display: none; }

  .ws-tabtop {
    padding: 60px 0 0; }

  .ws-table .table-block {
    margin: -70px auto 60px; }

  .section-numbers {
    padding-top: 0; }
    .section-numbers .number-row {
      grid-gap: 10px; }
      .section-numbers .number-row .number-col {
        padding: 20px; }
        .section-numbers .number-row .number-col .card-image {
          height: 120px;
          margin: 0 0 15px; }
          .section-numbers .number-row .number-col .card-image img {
            object-fit: contain; }
        .section-numbers .number-row .number-col h2 {
          font-size: 32px; }
        .section-numbers .number-row .number-col h3 {
          font-size: 18px; }
        .section-numbers .number-row .number-col p {
          min-height: 80px; }
        .section-numbers .number-row .number-col.is-first {
          flex-basis: 100%; }
        .section-numbers .number-row .number-col .is-grey {
          font-size: 12px; }
        .section-numbers .number-row .number-col .btn {
          margin: 0; }

  .middle-section .item .column-left .text-column h3:before {
    content: "";
    width: 25px;
    height: 25px; }

  .trackEm-container .trackEm {
    padding: 0 0 40px; }
    .trackEm-container .trackEm:last-child {
      padding: 0; } }
/* ... */

